--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "bootstrap": "^4.4.1",
         "gulp": "^4.0.2",
         "jquery": "^3.4.1",
+        "laravel-file-manager": "^2.4.12",
         "popper.js": "^1.16.1",
         "vue": "^2.6.11",
+        "vuex": "^3.1.3",
         "wappalyzer": "^5.9.27"
     },
     "scripts": {
