--- a/package.json
+++ b/package.json
@@ -1,38 +1,40 @@
 {
     "private": true,
     "devDependencies": {
-        "@babel/plugin-syntax-jsx": "^7.8.3",
         "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+        "@babel/plugin-syntax-jsx": "^7.8.3",
         "babel-helper-vue-jsx-merge-props": "^2.0.3",
         "babel-plugin-transform-vue-jsx": "^4.0.1",
         "coldbox-elixir": "^3.1.2",
         "node-sass": "^4.13.1",
-        "postcss-loader": "^3.0.0",
-        "sass-loader": "^7.3.1",
-        "vue-loader": "^15.9.1",
-        "vue-template-compiler": "^2.6.11",
         "postcss-import": "^12.0.1",
+        "postcss-loader": "^3.0.0",
         "postcss-nesting": "^7.0.0",
         "resolve-url-loader": "^2.3.1",
-        "tailwindcss": "^0.7.4"
+        "sass-loader": "^7.3.1",
+        "tailwindcss": "^0.7.4",
+        "vue-loader": "^15.9.1",
+        "vue-template-compiler": "^2.6.11",
+        "webpack-bundle-analyzer": "^3.6.1"
     },
     "dependencies": {
-        "axios": "^0.19.2",
-        "bootstrap": "^4.4.1",
-        "gulp": "^4.0.2",
-        "jquery": "^3.4.1",
-        "popper.js": "^1.16.1",
-        "vue": "^2.6.10",
-        "vuex": "^3.1.3",
-        "wappalyzer": "^5.9.27",
         "@inertiajs/inertia": "^0.1.3",
         "@inertiajs/inertia-vue": "^0.1.1",
         "autosize": "^4.0.2",
+        "axios": "^0.19.2",
+        "bootstrap": "^4.4.1",
         "fuse.js": "^3.4.2",
+        "gulp": "^4.0.2",
+        "jquery": "^3.4.1",
         "lodash": "^4.17.5",
+        "popper.js": "^1.16.1",
         "portal-vue": "^1.5.1",
         "query-string": "^6.9.0",
-        "vue-meta": "^2.2.2"
+        "quill": "^1.3.7",
+        "vue": "^2.6.10",
+        "vue-meta": "^2.2.2",
+        "vuex": "^3.1.3",
+        "wappalyzer": "^5.9.27"
     },
     "scripts": {
         "dev": "webpack --hide-modules",
