--- a/.env
+++ b/.env
@@ -12,6 +12,8 @@ DB_SCHEMA=wpscan
 DB_DATABASE=wpscan
 DB_USER=root
 DB_PASSWORD=
+DB_BUNDLENAME=com.mysql.cj
+DB_BUNDLEVERSION=
 
 # JWT Information
 JWT_SECRET=
