--- a/includes/rev-manifest.json
+++ b/includes/rev-manifest.json
@@ -1,43 +1,24 @@
 {
-  "includes/js/vendor.js": "/includes/js/vendor.a4fae703f57c5fa653f1.js",
-  "includes/js/vendor.js.map": "/includes/js/vendor.a4fae703f57c5fa653f1.js.map",
-  "modules_app/admin/includes/js/pages/shared.js": "/modules_app/admin/includes/js/pages/shared.cee59106592047281890.js",
-  "modules_app/admin/includes/js/pages/shared.js.map": "/modules_app/admin/includes/js/pages/shared.cee59106592047281890.js.map",
-  "includes/js/runtime.js": "/includes/js/runtime.8e22d3918c2d9e7f7ee7.js",
-  "includes/js/runtime.js.map": "/includes/js/runtime.8e22d3918c2d9e7f7ee7.js.map",
-  "modules_app/admin/includes/js/pages/Auth-Login.js": "/modules_app/admin/includes/js/pages/Auth-Login.5dac5a612029d960035b.js",
-  "modules_app/admin/includes/js/pages/Auth-Login.js.map": "/modules_app/admin/includes/js/pages/Auth-Login.5dac5a612029d960035b.js.map",
-  "modules_app/admin/includes/js/pages/Dashboard-Index.js": "/modules_app/admin/includes/js/pages/Dashboard-Index.76c3f161668cab127b21.js",
-  "modules_app/admin/includes/js/pages/Dashboard-Index.js.map": "/modules_app/admin/includes/js/pages/Dashboard-Index.76c3f161668cab127b21.js.map",
-  "modules_app/admin/includes/js/pages/Plugins-Edit.js": "/modules_app/admin/includes/js/pages/Plugins-Edit.4bd4fddfe72fd108506b.js",
-  "modules_app/admin/includes/js/pages/Plugins-Edit.js.map": "/modules_app/admin/includes/js/pages/Plugins-Edit.4bd4fddfe72fd108506b.js.map",
-  "modules_app/admin/includes/js/pages/Plugins-Index.js": "/modules_app/admin/includes/js/pages/Plugins-Index.e059ebb5fe91583e9cdd.js",
-  "modules_app/admin/includes/js/pages/Plugins-Index.js.map": "/modules_app/admin/includes/js/pages/Plugins-Index.e059ebb5fe91583e9cdd.js.map",
-  "modules_app/admin/includes/js/pages/Posts-Edit.js": "/modules_app/admin/includes/js/pages/Posts-Edit.75023d0abbcdc753bdec.js",
-  "modules_app/admin/includes/js/pages/Posts-Edit.js.map": "/modules_app/admin/includes/js/pages/Posts-Edit.75023d0abbcdc753bdec.js.map",
-  "modules_app/admin/includes/js/pages/Posts-Index.js": "/modules_app/admin/includes/js/pages/Posts-Index.00b435ac0347a808b674.js",
-  "modules_app/admin/includes/js/pages/Posts-Index.js.map": "/modules_app/admin/includes/js/pages/Posts-Index.00b435ac0347a808b674.js.map",
-  "modules_app/admin/includes/js/pages/Profile-Edit.js": "/modules_app/admin/includes/js/pages/Profile-Edit.af0f74912997c60db616.js",
-  "modules_app/admin/includes/js/pages/Profile-Edit.js.map": "/modules_app/admin/includes/js/pages/Profile-Edit.af0f74912997c60db616.js.map",
-  "modules_app/admin/includes/js/pages/Providers-Edit.js": "/modules_app/admin/includes/js/pages/Providers-Edit.40a929e0319fc9f91dc8.js",
-  "modules_app/admin/includes/js/pages/Providers-Edit.js.map": "/modules_app/admin/includes/js/pages/Providers-Edit.40a929e0319fc9f91dc8.js.map",
-  "modules_app/admin/includes/js/pages/Providers-Index.js": "/modules_app/admin/includes/js/pages/Providers-Index.b8d4b750c71f47082734.js",
-  "modules_app/admin/includes/js/pages/Providers-Index.js.map": "/modules_app/admin/includes/js/pages/Providers-Index.b8d4b750c71f47082734.js.map",
-  "modules_app/admin/includes/js/pages/Reports-Index.js": "/modules_app/admin/includes/js/pages/Reports-Index.246daae68cd387aa8896.js",
-  "modules_app/admin/includes/js/pages/Reports-Index.js.map": "/modules_app/admin/includes/js/pages/Reports-Index.246daae68cd387aa8896.js.map",
-  "modules_app/admin/includes/js/pages/Themes-Edit.js": "/modules_app/admin/includes/js/pages/Themes-Edit.0c5e062943e86c2a6b85.js",
-  "modules_app/admin/includes/js/pages/Themes-Edit.js.map": "/modules_app/admin/includes/js/pages/Themes-Edit.0c5e062943e86c2a6b85.js.map",
-  "modules_app/admin/includes/js/pages/Themes-Index.js": "/modules_app/admin/includes/js/pages/Themes-Index.65bfe08773406c6d35ab.js",
-  "modules_app/admin/includes/js/pages/Themes-Index.js.map": "/modules_app/admin/includes/js/pages/Themes-Index.65bfe08773406c6d35ab.js.map",
-  "includes/css/app.css": "/includes/css/app.2d20870133b130026f6c.css",
-  "includes/css/app.js": "/includes/css/app.9b43f476a258138f988a.js",
-  "includes/css/app.js.map": "/includes/css/app.9b43f476a258138f988a.js.map",
-  "includes/js/app.css": "/includes/js/app.082e39728effdc634593.css",
-  "includes/js/app.js": "/includes/js/app.490be55133cb3d2a5f44.js",
-  "includes/js/app.js.map": "/includes/js/app.490be55133cb3d2a5f44.js.map",
-  "modules_app/admin/includes/css/admin.css": "/modules_app/admin/includes/css/admin.6b69c1fc64c973087e12.css",
-  "modules_app/admin/includes/css/admin.js": "/modules_app/admin/includes/css/admin.54c3e65b82755ef5ce3d.js",
-  "modules_app/admin/includes/css/admin.js.map": "/modules_app/admin/includes/css/admin.54c3e65b82755ef5ce3d.js.map",
-  "modules_app/admin/includes/js/admin.js": "/modules_app/admin/includes/js/admin.c5ff059b84f6e9d3f3a0.js",
-  "modules_app/admin/includes/js/admin.js.map": "/modules_app/admin/includes/js/admin.c5ff059b84f6e9d3f3a0.js.map"
+  "includes/js/runtime.js": "/includes/js/runtime.js",
+  "includes/js/vendor.js": "/includes/js/vendor.js",
+  "includes/css/app.css": "/includes/css/app.css",
+  "includes/css/app.js": "/includes/css/app.js",
+  "includes/js/app.css": "/includes/js/app.css",
+  "includes/js/app.js": "/includes/js/app.js",
+  "modules_app/admin/includes/js/pages/Auth-Login.js": "/modules_app/admin/includes/js/pages/Auth-Login.js",
+  "modules_app/admin/includes/js/pages/Dashboard-Index.js": "/modules_app/admin/includes/js/pages/Dashboard-Index.js",
+  "modules_app/admin/includes/js/pages/Plugins-Edit.js": "/modules_app/admin/includes/js/pages/Plugins-Edit.js",
+  "modules_app/admin/includes/js/pages/Plugins-Index.js": "/modules_app/admin/includes/js/pages/Plugins-Index.js",
+  "modules_app/admin/includes/js/pages/Posts-Edit.js": "/modules_app/admin/includes/js/pages/Posts-Edit.js",
+  "modules_app/admin/includes/js/pages/Posts-Index.js": "/modules_app/admin/includes/js/pages/Posts-Index.js",
+  "modules_app/admin/includes/js/pages/Profile-Edit.js": "/modules_app/admin/includes/js/pages/Profile-Edit.js",
+  "modules_app/admin/includes/js/pages/Providers-Edit.js": "/modules_app/admin/includes/js/pages/Providers-Edit.js",
+  "modules_app/admin/includes/js/pages/Providers-Index.js": "/modules_app/admin/includes/js/pages/Providers-Index.js",
+  "modules_app/admin/includes/js/pages/Reports-Index.js": "/modules_app/admin/includes/js/pages/Reports-Index.js",
+  "modules_app/admin/includes/js/pages/Themes-Edit.js": "/modules_app/admin/includes/js/pages/Themes-Edit.js",
+  "modules_app/admin/includes/js/pages/Themes-Index.js": "/modules_app/admin/includes/js/pages/Themes-Index.js",
+  "modules_app/admin/includes/js/pages/shared.js": "/modules_app/admin/includes/js/pages/shared.js",
+  "modules_app/admin/includes/css/admin.css": "/modules_app/admin/includes/css/admin.css",
+  "modules_app/admin/includes/css/admin.js": "/modules_app/admin/includes/css/admin.js",
+  "modules_app/admin/includes/js/admin.js": "/modules_app/admin/includes/js/admin.js"
 }
