--- a/includes/rev-manifest.json
+++ b/includes/rev-manifest.json
@@ -1,43 +1,24 @@
 {
-  "includes/js/vendor.js": "/includes/js/vendor.80e8fab28bf7fb4ef66d.js",
-  "includes/js/vendor.js.map": "/includes/js/vendor.80e8fab28bf7fb4ef66d.js.map",
-  "modules_app/admin/includes/js/pages/shared.js": "/modules_app/admin/includes/js/pages/shared.a44071f52a8ae4d60ca0.js",
-  "modules_app/admin/includes/js/pages/shared.js.map": "/modules_app/admin/includes/js/pages/shared.a44071f52a8ae4d60ca0.js.map",
-  "includes/js/runtime.js": "/includes/js/runtime.7e4b2cb57b17f112ebbe.js",
-  "includes/js/runtime.js.map": "/includes/js/runtime.7e4b2cb57b17f112ebbe.js.map",
-  "modules_app/admin/includes/js/pages/Auth-Login.js": "/modules_app/admin/includes/js/pages/Auth-Login.8ca2f365b1388676efe6.js",
-  "modules_app/admin/includes/js/pages/Auth-Login.js.map": "/modules_app/admin/includes/js/pages/Auth-Login.8ca2f365b1388676efe6.js.map",
-  "modules_app/admin/includes/js/pages/Dashboard-Index.js": "/modules_app/admin/includes/js/pages/Dashboard-Index.5b27a55d5cf0285f23f6.js",
-  "modules_app/admin/includes/js/pages/Dashboard-Index.js.map": "/modules_app/admin/includes/js/pages/Dashboard-Index.5b27a55d5cf0285f23f6.js.map",
-  "modules_app/admin/includes/js/pages/Plugins-Edit.js": "/modules_app/admin/includes/js/pages/Plugins-Edit.87df4181a85c276a6898.js",
-  "modules_app/admin/includes/js/pages/Plugins-Edit.js.map": "/modules_app/admin/includes/js/pages/Plugins-Edit.87df4181a85c276a6898.js.map",
-  "modules_app/admin/includes/js/pages/Plugins-Index.js": "/modules_app/admin/includes/js/pages/Plugins-Index.6551ee231c45b9643eb5.js",
-  "modules_app/admin/includes/js/pages/Plugins-Index.js.map": "/modules_app/admin/includes/js/pages/Plugins-Index.6551ee231c45b9643eb5.js.map",
-  "modules_app/admin/includes/js/pages/Posts-Edit.js": "/modules_app/admin/includes/js/pages/Posts-Edit.ed0d7c55137e9ad942c0.js",
-  "modules_app/admin/includes/js/pages/Posts-Edit.js.map": "/modules_app/admin/includes/js/pages/Posts-Edit.ed0d7c55137e9ad942c0.js.map",
-  "modules_app/admin/includes/js/pages/Posts-Index.js": "/modules_app/admin/includes/js/pages/Posts-Index.7169daed0159f33bbbd9.js",
-  "modules_app/admin/includes/js/pages/Posts-Index.js.map": "/modules_app/admin/includes/js/pages/Posts-Index.7169daed0159f33bbbd9.js.map",
-  "modules_app/admin/includes/js/pages/Profile-Edit.js": "/modules_app/admin/includes/js/pages/Profile-Edit.5b1943c4b9cf4c55f836.js",
-  "modules_app/admin/includes/js/pages/Profile-Edit.js.map": "/modules_app/admin/includes/js/pages/Profile-Edit.5b1943c4b9cf4c55f836.js.map",
-  "modules_app/admin/includes/js/pages/Providers-Edit.js": "/modules_app/admin/includes/js/pages/Providers-Edit.58867989f9ff6cbbf65b.js",
-  "modules_app/admin/includes/js/pages/Providers-Edit.js.map": "/modules_app/admin/includes/js/pages/Providers-Edit.58867989f9ff6cbbf65b.js.map",
-  "modules_app/admin/includes/js/pages/Providers-Index.js": "/modules_app/admin/includes/js/pages/Providers-Index.3401f296f0bab5db1b44.js",
-  "modules_app/admin/includes/js/pages/Providers-Index.js.map": "/modules_app/admin/includes/js/pages/Providers-Index.3401f296f0bab5db1b44.js.map",
-  "modules_app/admin/includes/js/pages/Reports-Index.js": "/modules_app/admin/includes/js/pages/Reports-Index.ec14127c0b568ee98a93.js",
-  "modules_app/admin/includes/js/pages/Reports-Index.js.map": "/modules_app/admin/includes/js/pages/Reports-Index.ec14127c0b568ee98a93.js.map",
-  "modules_app/admin/includes/js/pages/Themes-Edit.js": "/modules_app/admin/includes/js/pages/Themes-Edit.1551046f59ec3a6a137b.js",
-  "modules_app/admin/includes/js/pages/Themes-Edit.js.map": "/modules_app/admin/includes/js/pages/Themes-Edit.1551046f59ec3a6a137b.js.map",
-  "modules_app/admin/includes/js/pages/Themes-Index.js": "/modules_app/admin/includes/js/pages/Themes-Index.b100030b1c8ddb31ea79.js",
-  "modules_app/admin/includes/js/pages/Themes-Index.js.map": "/modules_app/admin/includes/js/pages/Themes-Index.b100030b1c8ddb31ea79.js.map",
-  "includes/css/app.css": "/includes/css/app.2d20870133b130026f6c.css",
-  "includes/css/app.js": "/includes/css/app.c6d3bf0fabb15ea7f0f8.js",
-  "includes/css/app.js.map": "/includes/css/app.c6d3bf0fabb15ea7f0f8.js.map",
-  "includes/js/app.css": "/includes/js/app.7831d67cf0f7fa0a2bd8.css",
-  "includes/js/app.js": "/includes/js/app.14b644034622bf5bab2a.js",
-  "includes/js/app.js.map": "/includes/js/app.14b644034622bf5bab2a.js.map",
-  "modules_app/admin/includes/css/admin.css": "/modules_app/admin/includes/css/admin.6b69c1fc64c973087e12.css",
-  "modules_app/admin/includes/css/admin.js": "/modules_app/admin/includes/css/admin.05d25df389165024e35e.js",
-  "modules_app/admin/includes/css/admin.js.map": "/modules_app/admin/includes/css/admin.05d25df389165024e35e.js.map",
-  "modules_app/admin/includes/js/admin.js": "/modules_app/admin/includes/js/admin.9dd49086a89ed16cc5ea.js",
-  "modules_app/admin/includes/js/admin.js.map": "/modules_app/admin/includes/js/admin.9dd49086a89ed16cc5ea.js.map"
+  "includes/js/runtime.js": "/includes/js/runtime.js",
+  "includes/js/vendor.js": "/includes/js/vendor.js",
+  "includes/css/app.css": "/includes/css/app.css",
+  "includes/css/app.js": "/includes/css/app.js",
+  "includes/js/app.css": "/includes/js/app.css",
+  "includes/js/app.js": "/includes/js/app.js",
+  "modules_app/admin/includes/js/pages/Auth-Login.js": "/modules_app/admin/includes/js/pages/Auth-Login.js",
+  "modules_app/admin/includes/js/pages/Dashboard-Index.js": "/modules_app/admin/includes/js/pages/Dashboard-Index.js",
+  "modules_app/admin/includes/js/pages/Plugins-Edit.js": "/modules_app/admin/includes/js/pages/Plugins-Edit.js",
+  "modules_app/admin/includes/js/pages/Plugins-Index.js": "/modules_app/admin/includes/js/pages/Plugins-Index.js",
+  "modules_app/admin/includes/js/pages/Posts-Edit.js": "/modules_app/admin/includes/js/pages/Posts-Edit.js",
+  "modules_app/admin/includes/js/pages/Posts-Index.js": "/modules_app/admin/includes/js/pages/Posts-Index.js",
+  "modules_app/admin/includes/js/pages/Profile-Edit.js": "/modules_app/admin/includes/js/pages/Profile-Edit.js",
+  "modules_app/admin/includes/js/pages/Providers-Edit.js": "/modules_app/admin/includes/js/pages/Providers-Edit.js",
+  "modules_app/admin/includes/js/pages/Providers-Index.js": "/modules_app/admin/includes/js/pages/Providers-Index.js",
+  "modules_app/admin/includes/js/pages/Reports-Index.js": "/modules_app/admin/includes/js/pages/Reports-Index.js",
+  "modules_app/admin/includes/js/pages/Themes-Edit.js": "/modules_app/admin/includes/js/pages/Themes-Edit.js",
+  "modules_app/admin/includes/js/pages/Themes-Index.js": "/modules_app/admin/includes/js/pages/Themes-Index.js",
+  "modules_app/admin/includes/js/pages/shared.js": "/modules_app/admin/includes/js/pages/shared.js",
+  "modules_app/admin/includes/css/admin.css": "/modules_app/admin/includes/css/admin.css",
+  "modules_app/admin/includes/css/admin.js": "/modules_app/admin/includes/css/admin.js",
+  "modules_app/admin/includes/js/admin.js": "/modules_app/admin/includes/js/admin.js"
 }
