--- a/includes/rev-manifest.json
+++ b/includes/rev-manifest.json
@@ -1,24 +1,43 @@
 {
-  "includes/js/runtime.js": "/includes/js/runtime.js",
-  "includes/js/vendor.js": "/includes/js/vendor.js",
-  "includes/css/app.css": "/includes/css/app.css",
-  "includes/css/app.js": "/includes/css/app.js",
-  "includes/js/app.css": "/includes/js/app.css",
-  "includes/js/app.js": "/includes/js/app.js",
-  "modules_app/admin/includes/js/pages/Auth-Login.js": "/modules_app/admin/includes/js/pages/Auth-Login.js",
-  "modules_app/admin/includes/js/pages/Dashboard-Index.js": "/modules_app/admin/includes/js/pages/Dashboard-Index.js",
-  "modules_app/admin/includes/js/pages/Plugins-Edit.js": "/modules_app/admin/includes/js/pages/Plugins-Edit.js",
-  "modules_app/admin/includes/js/pages/Plugins-Index.js": "/modules_app/admin/includes/js/pages/Plugins-Index.js",
-  "modules_app/admin/includes/js/pages/Posts-Edit.js": "/modules_app/admin/includes/js/pages/Posts-Edit.js",
-  "modules_app/admin/includes/js/pages/Posts-Index.js": "/modules_app/admin/includes/js/pages/Posts-Index.js",
-  "modules_app/admin/includes/js/pages/Profile-Edit.js": "/modules_app/admin/includes/js/pages/Profile-Edit.js",
-  "modules_app/admin/includes/js/pages/Providers-Edit.js": "/modules_app/admin/includes/js/pages/Providers-Edit.js",
-  "modules_app/admin/includes/js/pages/Providers-Index.js": "/modules_app/admin/includes/js/pages/Providers-Index.js",
-  "modules_app/admin/includes/js/pages/Reports-Index.js": "/modules_app/admin/includes/js/pages/Reports-Index.js",
-  "modules_app/admin/includes/js/pages/Themes-Edit.js": "/modules_app/admin/includes/js/pages/Themes-Edit.js",
-  "modules_app/admin/includes/js/pages/Themes-Index.js": "/modules_app/admin/includes/js/pages/Themes-Index.js",
-  "modules_app/admin/includes/js/pages/shared.js": "/modules_app/admin/includes/js/pages/shared.js",
-  "modules_app/admin/includes/css/admin.css": "/modules_app/admin/includes/css/admin.css",
-  "modules_app/admin/includes/css/admin.js": "/modules_app/admin/includes/css/admin.js",
-  "modules_app/admin/includes/js/admin.js": "/modules_app/admin/includes/js/admin.js"
+  "includes/js/vendor.js": "/includes/js/vendor.c5ec0e0e9b8c81705b50.js",
+  "includes/js/vendor.js.map": "/includes/js/vendor.c5ec0e0e9b8c81705b50.js.map",
+  "modules_app/admin/includes/js/pages/shared.js": "/modules_app/admin/includes/js/pages/shared.d6874a62b2a0a101c9c5.js",
+  "modules_app/admin/includes/js/pages/shared.js.map": "/modules_app/admin/includes/js/pages/shared.d6874a62b2a0a101c9c5.js.map",
+  "includes/js/runtime.js": "/includes/js/runtime.82d95cee1d8c9d1f8daa.js",
+  "includes/js/runtime.js.map": "/includes/js/runtime.82d95cee1d8c9d1f8daa.js.map",
+  "modules_app/admin/includes/js/pages/Auth-Login.js": "/modules_app/admin/includes/js/pages/Auth-Login.3d592db73f889c0a92f9.js",
+  "modules_app/admin/includes/js/pages/Auth-Login.js.map": "/modules_app/admin/includes/js/pages/Auth-Login.3d592db73f889c0a92f9.js.map",
+  "modules_app/admin/includes/js/pages/Dashboard-Index.js": "/modules_app/admin/includes/js/pages/Dashboard-Index.0ecdec284a262a8a52fb.js",
+  "modules_app/admin/includes/js/pages/Dashboard-Index.js.map": "/modules_app/admin/includes/js/pages/Dashboard-Index.0ecdec284a262a8a52fb.js.map",
+  "modules_app/admin/includes/js/pages/Plugins-Edit.js": "/modules_app/admin/includes/js/pages/Plugins-Edit.fa0e0ec3040a54053204.js",
+  "modules_app/admin/includes/js/pages/Plugins-Edit.js.map": "/modules_app/admin/includes/js/pages/Plugins-Edit.fa0e0ec3040a54053204.js.map",
+  "modules_app/admin/includes/js/pages/Plugins-Index.js": "/modules_app/admin/includes/js/pages/Plugins-Index.a4e515abe6de8686b267.js",
+  "modules_app/admin/includes/js/pages/Plugins-Index.js.map": "/modules_app/admin/includes/js/pages/Plugins-Index.a4e515abe6de8686b267.js.map",
+  "modules_app/admin/includes/js/pages/Posts-Edit.js": "/modules_app/admin/includes/js/pages/Posts-Edit.89aa2f2167a3aee78548.js",
+  "modules_app/admin/includes/js/pages/Posts-Edit.js.map": "/modules_app/admin/includes/js/pages/Posts-Edit.89aa2f2167a3aee78548.js.map",
+  "modules_app/admin/includes/js/pages/Posts-Index.js": "/modules_app/admin/includes/js/pages/Posts-Index.667fe53cb717e2aa7e16.js",
+  "modules_app/admin/includes/js/pages/Posts-Index.js.map": "/modules_app/admin/includes/js/pages/Posts-Index.667fe53cb717e2aa7e16.js.map",
+  "modules_app/admin/includes/js/pages/Profile-Edit.js": "/modules_app/admin/includes/js/pages/Profile-Edit.f6ceec73473ca29da3e2.js",
+  "modules_app/admin/includes/js/pages/Profile-Edit.js.map": "/modules_app/admin/includes/js/pages/Profile-Edit.f6ceec73473ca29da3e2.js.map",
+  "modules_app/admin/includes/js/pages/Providers-Edit.js": "/modules_app/admin/includes/js/pages/Providers-Edit.a5627e95d42959139762.js",
+  "modules_app/admin/includes/js/pages/Providers-Edit.js.map": "/modules_app/admin/includes/js/pages/Providers-Edit.a5627e95d42959139762.js.map",
+  "modules_app/admin/includes/js/pages/Providers-Index.js": "/modules_app/admin/includes/js/pages/Providers-Index.8af481d700e11a5d4832.js",
+  "modules_app/admin/includes/js/pages/Providers-Index.js.map": "/modules_app/admin/includes/js/pages/Providers-Index.8af481d700e11a5d4832.js.map",
+  "modules_app/admin/includes/js/pages/Reports-Index.js": "/modules_app/admin/includes/js/pages/Reports-Index.0b00c01920d680147d8e.js",
+  "modules_app/admin/includes/js/pages/Reports-Index.js.map": "/modules_app/admin/includes/js/pages/Reports-Index.0b00c01920d680147d8e.js.map",
+  "modules_app/admin/includes/js/pages/Themes-Edit.js": "/modules_app/admin/includes/js/pages/Themes-Edit.72cae6e6ae5d765b8c0b.js",
+  "modules_app/admin/includes/js/pages/Themes-Edit.js.map": "/modules_app/admin/includes/js/pages/Themes-Edit.72cae6e6ae5d765b8c0b.js.map",
+  "modules_app/admin/includes/js/pages/Themes-Index.js": "/modules_app/admin/includes/js/pages/Themes-Index.302547b202dd39f6ee08.js",
+  "modules_app/admin/includes/js/pages/Themes-Index.js.map": "/modules_app/admin/includes/js/pages/Themes-Index.302547b202dd39f6ee08.js.map",
+  "includes/css/app.css": "/includes/css/app.2d20870133b130026f6c.css",
+  "includes/css/app.js": "/includes/css/app.9be91463cb53dabc021e.js",
+  "includes/css/app.js.map": "/includes/css/app.9be91463cb53dabc021e.js.map",
+  "includes/js/app.css": "/includes/js/app.ee79a867ed7252139d58.css",
+  "includes/js/app.js": "/includes/js/app.026f59a829ac90026ff1.js",
+  "includes/js/app.js.map": "/includes/js/app.026f59a829ac90026ff1.js.map",
+  "modules_app/admin/includes/css/admin.css": "/modules_app/admin/includes/css/admin.6b69c1fc64c973087e12.css",
+  "modules_app/admin/includes/css/admin.js": "/modules_app/admin/includes/css/admin.c186d1b4dadd7d0e07e1.js",
+  "modules_app/admin/includes/css/admin.js.map": "/modules_app/admin/includes/css/admin.c186d1b4dadd7d0e07e1.js.map",
+  "modules_app/admin/includes/js/admin.js": "/modules_app/admin/includes/js/admin.76227a9e4387b33f384c.js",
+  "modules_app/admin/includes/js/admin.js.map": "/modules_app/admin/includes/js/admin.76227a9e4387b33f384c.js.map"
 }
